Wed May 21 13:19:05 2003  Hidetoshi Tajima  <hidetoshi.tajima@sun.com>

	* gtk/gtkenums.h (enum GtkIMPreeditStyle, GtkIMStatusStyle): 
	* modules/input/gtkimcontextxim.c (preedit_style_change, status_style_change):
	gtk settings for XIMPreeditNone and XIMStatusNone. (#105909)

Wed May 21 12:10:25 2003  Hidetoshi Tajima  <hidetoshi.tajima@sun.com>

	* gtk/gtkimcontextsimple.c: 
	code that can check the compose table for ascending order,
	by Vasilis Vasaitis (#104862).

Wed May 21 12:52:01 2003  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkkeyhash.[ch] (_gtk_key_hash_looku): We need 
	to pass the unmasked state to gdk_keymap_translate_keyboard_state() 
	to handle the case where a modifier not in the mask
	(like Num_Lock) changes the key value, so replace
	the masked state with a state/mask pair. (#106913,
	Olivier Ripoll)

	* gtk/gtkwindow.c gtk/gtkbinding.c: Update to pass
	in state/mask pair to _gtk_key_hash_lookup()

Tue May 20 21:58:00 2003  Hidetoshi Tajima  <hidetoshi.tajima@sun.com>

	* modules/input/gtkimcontextxim.c (xim_info_display_closed):
	fix a memory leak, free input context list (#113259).

2003-05-21  Matthias Clasen  <maclas@gmx.de>

	* configure.in (all_loaders): Add pcx.

	* gtk/gtkcalendar.c: Make calendar controls spin.  (#112540)

Tue May 20 17:27:24 2003  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkimmodule.c (gtk_im_module_init): Silently
	accept a missing gtk.immodules file, some people
	want to run without one. (#112406, patch from
	Arnaud Charlet)

Tue May 20 17:05:31 2003  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkwindow.c (gtk_window_compute_hints): Fix 
	height/width confusion (#113370, Xan Lopez)

Tue May 20 15:48:45 2003  Owen Taylor  <otaylor@redhat.com>

	* gdk/x11/gdkdnd-x11.c gdk/x11/gdkwindow-x11.c: Comprehensively
	zero all unused parts of client messages (Mainly Motif DND
	and EWMH). Also, fix a couple places where we were putting
	contents into Motif DND messages that didn't belong.