@@ -1,3 +1,8 @@
+Wed May 21 14:06:13 2003  Hidetoshi Tajima  <hidetoshi.tajima@sun.com>
+
+	* gtk/gtkimcontextsimple.c: added composing rules of
+	Greek acceted letters, patch by Vasilis Vasaitis (#107507)
+
 Wed May 21 13:19:05 2003  Hidetoshi Tajima  <hidetoshi.tajima@sun.com>
 
 	* gtk/gtkenums.h (enum GtkIMPreeditStyle, GtkIMStatusStyle): 
